--- a/exercices/03.class_tree/01.class_tree_exo.md
+++ b/exercices/03.class_tree/01.class_tree_exo.md
@@ -13,6 +13,7 @@
 import json
 from unidecode import unidecode
 from treelib import Tree
+imoprt os
 
 # Fonction pour charger les données JSON depuis un fichier et les convertir en dictionnaire Python
 la fonction json_dict_from_file() reste inchangée.
